# 4o-ghibli-at-home

./: .env_template  .gitignore  README.md  main.py  pyproject.toml  requirements.txt  run_dev.sh
app/: main.py
app/core/: config.py  lifespan.py  logging.py
app/models/: job.py  profile.py
app/routers/: jobs.py  profiles.py
app/services/: ml_model.py  task_queue.py
app/utils/: file_helpers.py
